--- a/T4/tutorial4.tex
+++ b/T4/tutorial4.tex
@@ -17,10 +17,10 @@
 %\newpage
 
 The spatial stochastic simulation capabilities in StochSS are based on PyURDME \cite{urdme}. PyURDME is a general software framework for modeling and simulation of stochastic reaction-diffusion processes on unstructured, tetrahedral (3D) and triangular (2D) meshes. The current core simulation algorithm is based on the mesoscopic reaction-diffusion master equation (RDME) model. The default solver is an efficient implementation of the next subvolume method (NSM) \cite{nsm}.
+%
+%\section{Spatial Stochastic Simulations}
 
-\section{Spatial Stochastic Simulations}
-
-\subsection{An Instructive Example}
+\section{An Instructive Example}
 We will build a simple model based on an annihilation reaction between two chemical species generated  by sources located at the two opposite bases of an enclosing cylinder.
 %The creation of our new spatial model using the \textbf{Model editor} progresses through the following steps:
 \begin{itemize}
