Fixed some spacing issues

--- a/T1/tutorial1.tex
+++ b/T1/tutorial1.tex
@@ -2,7 +2,7 @@
 \label{chapter1}
 This tutorial will guide you through the basic features of StochSS. You will become familiar with the \textbf{Model Editor} and the \textbf{Simulation Manager}. You will learn how to create your own model, which can be population or concentration-based, and how to simulate it using either an ordinary differential equation (ODE) solver or the stochastic simulation algorithm (SSA).
 
-\section{\label{sec:acc} Creating Administrator and Standard User Accounts}
+\section{Creating Administrator and Standard User Accounts}
 At the end of a successful installation process, your default browser will launch and you will be asked to create an admin account as in Figure \ref{fig:admin} (there is only one admin account for the entire system).
 Once the admin account is created you will be forwarded to a regular login page where you can log in to StochSS.
 
@@ -23,7 +23,7 @@ The account will not be accessible until the admin approves it in the \textbf{Ad
 %\label{fig:login}
 %\end{figure}
 
-\section{\label{sec:imp} Importing a Model}
+\section{Importing a Model}
 The \textbf{Model Editor} will let you create new or modify existing well-mixed stochastic biochemical models as well as deterministic models based on ODEs.
 The best way to get started with the model editor is to import an example model and look at the different sections.
 
