--- a/T2/tutorial2.tex
+++ b/T2/tutorial2.tex
@@ -1,6 +1,6 @@
-\chapter{Sensitivity Analysis with StochSS}
+\chapter{Sensitivity Analysis}
 
-StochSS implements forward sensitivity analysis for the deterministic (ODE-based) solver based on SUNDIAL's CVODES solver \cite{sundials}.
+StochSS implements forward sensitivity analysis based on the CVODES ODE solver \cite{sundials}.
 
 For instance, if we consider the population of $P$ and the parameter $Vmax$ in the Michaelis-Menten model in the \textbf{Public Library}. The sensitivity of the rate of the increase in population $P$ to the parameter $Vmax$ is defined as the incremental rate of change in $P$ due to incremental changes in $Vmax$:
 
