--- a/T4/tutorial4.tex
+++ b/T4/tutorial4.tex
@@ -1,4 +1,4 @@
-\chapter{Spatial Stochastic Simulations with StochSS}
+\chapter{Spatial Stochastic Simulations}
 
 %\section{\label{sec:pre}Prerequisites}
 %\begin{itemize}
@@ -20,7 +20,7 @@ The spatial stochastic simulation capabilities in StochSS are based on PyURDME \
 %
 %\section{Spatial Stochastic Simulations}
 
-\section{An Instructive Example}
+\section{Example: Annihilation of two species in a cylinder}
 We will build a simple model based on an annihilation reaction between two chemical species generated  by sources located at the two opposite bases of an enclosing cylinder.
 %The creation of our new spatial model using the \textbf{Model editor} progresses through the following steps:
 \begin{itemize}
@@ -54,7 +54,7 @@ We will build a simple model based on an annihilation reaction between two chemi
 \item Navigate to the \textbf{Simulation manager} page.
 
 \item Select the spatial model you just created and click \textbf{Next}.
-\item Setup your simulation parameters: name, time, data storage frequency and realizations. 
+\item Setup the simulation parameters: name, time, data storage frequency, and number of realizations. 
 \item You can specify a random seed for the random number generator under \textbf{Advanced Settings}.
 %\item To define the initial random seed, select \textbf{Advanced Settings}.
 \item Click \textbf{Run locally}.
