--- a/T1/tutorial1.tex
+++ b/T1/tutorial1.tex
@@ -36,7 +36,7 @@ The best way to get started with the model editor is to import an example model 
   \item Select a model from the Public Library and click \textbf{Copy Model to Library}.
 \end{itemize}
 
-\noindent\underline{Option 2: Stochkit2 .XML}
+\noindent\underline{Option 2: Stochkit2 XML}
 \begin{itemize}
   \item Navigate to the \textbf{Model Editor} page.
   \item Click \textbf{Import from .XML} in the right-hand toolbar.
